k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
  template:
    metadata:
      labels:
        app: netflix
    spec:
      containers:
        - name: netflix
          image: YOUR_DOCKERHUB_USERNAME/netflix-clone-react-typescript:latest
          ports:
            - containerPort: 80
