k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "argocd-netflix-ip"
    networking.gke.io/managed-certificates: "netflix-managed-cert"
spec:
  rules:
    - host: netflix-sitdog05.duckdns.org
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: netflix-service
                port:
                  number: 80
